<resources>
    <string name="app_name">DranACG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">漫画</string>
    <string name="book_source">书源</string>
    <string name="book_shelf">书架</string>
    <string name="download">下载</string>
    <string name="others">其他</string>
    <string name="about">关于</string>
    <string name="comic">漫画</string>
    <string name="none_favourite">没有收藏</string>
    <string name="search">搜索</string>
    <string name="comic_icon">漫画图片</string>
    <string name="non_search_result">没有结果</string>
    <string name="loading">加载中</string>
    <string name="retry_connect">重试</string>
    <string name="error">错误</string>
    <string name="action_settings">设置</string>
    <string name="non_episode_result">没有章节</string>
    <string name="update_sign">更新标志</string>
    <string name="image_comic">漫画图片</string>
    <string name="read_mode">阅读方式</string>
    <string name="read_mode_horizon">翻页</string>
    <string name="read_mode_vertical">卷轴</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="sync">同步</string>
</resources>
