<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_book_source"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/book_source"/>
        <item
            android:id="@+id/nav_book_shelf"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/book_shelf"/>
        <item
            android:id="@+id/nav_download"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/download"/>
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>
