<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionSearch"
            android:hint="@string/search"
            android:importantForAutofill="no"
            tools:targetApi="o" />
        <ImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_search_white_24dp"
            android:contentDescription="@string/search"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:visibility="gone"
            android:layout_gravity="center"
            android:id="@+id/reminder_loading"
            android:text="@string/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:visibility="gone"
            android:layout_gravity="center"
            android:id="@+id/reminder_non_result"
            android:text="@string/non_search_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>